--- a/src/app/components/user-form/user-form.component.css
+++ b/src/app/components/user-form/user-form.component.css
@@ -15,7 +15,11 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  background-color: #f5f5e2;;
 
+}
+.input-container {
+  margin-top: 10%
 }
 mat-form-field {
   width: 500px;
@@ -44,6 +48,7 @@ mat-form-field {
   flex-direction: row;
   justify-content: space-between;
   margin-top: 30px;
+  margin-bottom: 5% !important;
 }
 .title{
   display: flex;
