--- a/src/app/components/user-list/user-list.component.css
+++ b/src/app/components/user-list/user-list.component.css
@@ -1,11 +1,12 @@
 .container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 100%;
   height: 100%;
 }
 .content{
-  width: 99%;
+  width: 95%;
   align-items: center;
   justify-content: center;
 }
@@ -18,6 +19,7 @@
 table {
   width: 100%;
   margin-left: 7px;
+  background-color: #f5f5e2;
 }
 .options-colun{
  text-align: center;
