--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -1,11 +1,7 @@
 <div class="container">
   <div class="content">
-    <div class="btn-actions">
-      <button mat-raised-button [routerLink]="['user-create']" color="primary">
-        Novo usúario
-      </button>
-    </div>
-    <table mat-table [dataSource]="userData" class="mat-elevation-z8">
+    <app-menu></app-menu>
+    <table mat-table [dataSource]="userData" class="mat-elevation-z8" style="margin-top: 15px;">
       <ng-container matColumnDef="id">
         <th mat-header-cell *matHeaderCellDef>Id</th>
         <td mat-cell *matCellDef="let element">{{ element.id }}</td>
