--- a/src/app/components/user-list/user-list.component.css
+++ b/src/app/components/user-list/user-list.component.css
@@ -19,7 +19,7 @@
 table {
   width: 100%;
   margin-left: 7px;
-  background-color: #f5f5e2;
+  background-color: #fffcfc;
 }
 .options-colun{
  text-align: center;
