--- a/src/app/components/menu/menu.component.css
+++ b/src/app/components/menu/menu.component.css
@@ -1,6 +1,21 @@
 .container{
   display: flex;
   align-items: center;
+
   flex-direction: row;
-  height: 20%;
+  min-width: 95%;
+
+}
+
+.content{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.title{
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+  margin-left: 15px;
 }
