--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,14 +1,14 @@
 <div class="container">
-  <div class="btn-actions">
+  <div class="content" *ngIf=" !isCreate && !isEdit">
     <button mat-raised-button [routerLink]="['user-create']" color="primary">
       Novo usúario
     </button>
 
-    <span>Usúarios</span>
+    <h2 class="title" >Lista de usuários</h2>
   </div>
 
-  <div class="container-menu">
-    <button mat-raised-button (click)="backPage()" color="primary">Voltar</button>
+  <div class="content">
+    <button  *ngIf="isCreate || isEdit" mat-raised-button (click)="backPage()" color="primary">Voltar</button>
     <h2 class="title" *ngIf="isCreate">Cadastrar usuário</h2>
     <h2 class="title" *ngIf="isEdit">Editar usuário</h2>
   </div>
