--- a/src/app/components/user-form/user-form.component.css
+++ b/src/app/components/user-form/user-form.component.css
@@ -1,3 +1,17 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.content{
+  width: 95%;
+  align-items: center;
+  justify-content: center;
+}
+
 .container-menu {
   margin-top: 30px;
   margin-bottom: 30px;
@@ -5,8 +19,8 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-
 }
+
 .card-container {
   min-width: 60%;
   min-height: 90%;
@@ -15,15 +29,18 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  background-color: #f5f5e2;;
-
+  background-color: #fffcfc;
+  margin-top: 15px;;
 }
+
 .input-container {
   margin-top: 10%
 }
+
 mat-form-field {
   width: 500px;
 }
+
 .container-form {
   display: flex;
   flex-direction: column;
@@ -31,9 +48,11 @@ mat-form-field {
   justify-content: center;
   flex-direction: column;
 }
+
 .form-fild {
   width: 500px !important;
 }
+
 .actions-btn-container{
   width: 20rem;
   display: flex;
@@ -42,6 +61,7 @@ mat-form-field {
   flex-direction: row;
 
 }
+
 .opt-container{
   width: 400px;
   display: flex;
@@ -50,6 +70,7 @@ mat-form-field {
   margin-top: 30px;
   margin-bottom: 5% !important;
 }
+
 .title{
   display: flex;
   align-items: center;
