--- a/src/app/components/user-form/user-form.component.html
+++ b/src/app/components/user-form/user-form.component.html
@@ -1,42 +1,46 @@
-<app-menu></app-menu>
-<div class="container-form">
-  <mat-card class="card-container mat-elevation-z6">
-    <form [formGroup]="form">
-      <div  class="input-container">
-        <div>
-          <mat-form-field appearance="fill">
-            <label>Name</label>
-            <input
-              matInput
-              placeholder="Your name"
-              formControlName="userName"
-              required
-            />
-            <!-- <mat-error *ngIf="email.invalid">{{ getErrorMessage() }}</mat-error> -->
-          </mat-form-field>
-        </div>
-        <div>
-          <mat-form-field appearance="fill">
-            <label>Email</label>
-            <input
-              matInput
-              placeholder="pat@example.com"
-              formControlName="userEmail"
-              required
-            />
-            <!-- <mat-error *ngIf="email.invalid">{{ getErrorMessage() }}</mat-error> -->
-          </mat-form-field>
-        </div>
-      </div>
-    </form>
+<div class="container">
+  <div class="content">
+    <app-menu></app-menu>
+    <div class="container-form">
+      <mat-card class="card-container mat-elevation-z6">
+        <form [formGroup]="form">
+          <div class="input-container">
+            <div>
+              <mat-form-field appearance="fill">
+                <label>Name</label>
+                <input
+                  matInput
+                  placeholder="Your name"
+                  formControlName="userName"
+                  required
+                />
+                <!-- <mat-error *ngIf="email.invalid">{{ getErrorMessage() }}</mat-error> -->
+              </mat-form-field>
+            </div>
+            <div>
+              <mat-form-field appearance="fill">
+                <label>Email</label>
+                <input
+                  matInput
+                  placeholder="pat@example.com"
+                  formControlName="userEmail"
+                  required
+                />
+                <!-- <mat-error *ngIf="email.invalid">{{ getErrorMessage() }}</mat-error> -->
+              </mat-form-field>
+            </div>
+          </div>
+        </form>
 
-    <div class="opt-container">
-      <button mat-raised-button (click)="Salvar()" color="primary">
-        Salvar
-      </button>
-      <button mat-raised-button (click)="Cancelar()" color="warn">
-        Cancelar
-      </button>
+        <div class="opt-container">
+          <button mat-raised-button (click)="Salvar()" color="primary">
+            Salvar
+          </button>
+          <button mat-raised-button (click)="Cancelar()" color="warn">
+            Cancelar
+          </button>
+        </div>
+      </mat-card>
     </div>
-  </mat-card>
+  </div>
 </div>
