--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,7 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.sucess-snack{
+  background-color: rgb(92, 225, 92);
+  color: #1f1f1f;
+}
